--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
         }
 
         function handleYesClick() {
-            window.location.href = '/yes_choice';
+            window.location.href = '/da';
         }
 
         function createGifObject() {
